# team_challenge

./: .env  pyproject.toml
apps/all_users/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/all_users/users/migrations/: 0001_initial.py  0002_profilemodel_email2.py  0003_remove_profilemodel_email2.py
config/: settings.py  urls.py
config/extra_conf/: rest_conf.py
